--- a/docs/_includes/include-page/index.html
+++ b/docs/_includes/include-page/index.html
@@ -48,6 +48,10 @@ Shortcode used in an include page.     Head 1 Head 2 Head 3     1 2 3    " />
 <meta property="og:url" content="https://docs.daacs.net/_includes/include-page/" />
 
 <meta property="article:section" content="Includes" />
+    <meta
+      property="article:modified_time"
+      content="2022-06-21T12:47:03-04:00"
+    />
 
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -79,7 +83,7 @@ Shortcode used in an include page.     Head 1 Head 2 Head 3     1 2 3    " />
       "copyrightYear" : "0001",
       "dateCreated": "0001-01-01T00:00:00.00Z",
       "datePublished": "0001-01-01T00:00:00.00Z",
-      "dateModified": "0001-01-01T00:00:00.00Z",
+      "dateModified": "2022-06-21T12:47:03.00Z",
       "publisher":{
           "@type":"Organization",
           "name": "DAACS",
@@ -922,12 +926,137 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
               
                 <span class="flex">
                   <a
-                    href="/01_overview/02_components/"
+                    href="/01_overview/02_purpose/"
                     class="gdoc-nav__entry"
                   >
-                    DAACS Components
+                    Purpose and Significance
                   </a>
                 </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+    
+      
+
+      
+        
+      
+
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">
+                  <a
+                    href="/01_overview/03_components/"
+                    class="gdoc-nav__entry"
+                  >
+                    Components
+                  </a>
+                </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+    
+      
+
+      
+        
+      
+
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">
+                  <a
+                    href="/01_overview/10_publications/"
+                    class="gdoc-nav__entry"
+                  >
+                    Publications
+                  </a>
+                </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+    
+      
+
+      
+        
+      
+
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">References</span>
               
               
             </label>
@@ -1055,7 +1184,138 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
               
             >
               
-                <span class="flex">Page 2</span>
+                <span class="flex">
+                  <a
+                    href="/02_advisors/08_ualbany/"
+                    class="gdoc-nav__entry"
+                  >
+                    UAlbany
+                  </a>
+                </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">
+                  <a
+                    href="/02_advisors/09_umgc/"
+                    class="gdoc-nav__entry"
+                  >
+                    UMGC
+                  </a>
+                </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+    
+      
+
+      
+        
+      
+
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">
+                  <a
+                    href="/02_advisors/10_faq/"
+                    class="gdoc-nav__entry"
+                  >
+                    FAQ
+                  </a>
+                </span>
+              
+              
+            </label>
+
+            
+          </li>
+        
+      
+    
+      
+
+      
+        
+      
+
+      
+        
+          
+          
+          
+          
+          
+          
+
+
+          <li>
+            <input
+              type="checkbox"
+              
+                class="hidden"
+              
+            />
+            <label
+              
+            >
+              
+                <span class="flex">
+                  <a
+                    href="/02_advisors/11_srl_videos/"
+                    class="gdoc-nav__entry"
+                  >
+                    SRL Videos
+                  </a>
+                </span>
               
               
             </label>
@@ -1615,7 +1875,7 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
     
   
   
-    <li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><a itemscope itemtype='https://schema.org/WebPage' itemprop='item' itemid='/' href='/'><span itemprop='name'>DAACS Documentation</span></a><meta itemprop='position' content='1' /></li><li> / </li><li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><a itemscope itemtype='https://schema.org/WebPage' itemprop='item' itemid='/_includes/' href='/_includes/'><span itemprop='name'>Includes</span></a><meta itemprop='position' content='2' /></li><li> / </li><li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><span itemprop='name'>Include Page</span><meta itemprop='position' content='3' /></li>
+    <li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><a itemscope itemtype='https://schema.org/WebPage' itemprop='item' itemid='/' href='/'><span itemprop='name'></span></a><meta itemprop='position' content='1' /></li><li> / </li><li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><a itemscope itemtype='https://schema.org/WebPage' itemprop='item' itemid='/_includes/' href='/_includes/'><span itemprop='name'>Includes</span></a><meta itemprop='position' content='2' /></li><li> / </li><li itemprop='itemListElement' itemscope itemtype='https://schema.org/ListItem'><span itemprop='name'>Include Page</span><meta itemprop='position' content='3' /></li>
   
 
   
