Updates to documentation and menu.

--- a/themes/hugo-geekdoc/layouts/partials/site-header.html
+++ b/themes/hugo-geekdoc/layouts/partials/site-header.html
@@ -16,7 +16,7 @@
       <a class="gdoc-brand gdoc-header__link" href="{{ .Root.Site.BaseURL }}">
         <span class="flex align-center">
           <img
-            class="gdoc-brand__img"
+            style="margin-right:1rem;height:2rem"
             src="{{ (default "brand.svg" .Root.Site.Params.GeekdocLogo) | relURL }}"
             alt=""
           />
